--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "craco-less": "^1.17.0",
     "install": "^0.13.0",
     "less-loader": "^7.0.2",
+    "moment": "^2.29.1",
     "npm": "^6.14.8",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
